--- a/my_cv.html
+++ b/my_cv.html
@@ -33,9 +33,33 @@
         <ul>Java</ul>
         <ul>Python</ul>
         <ul>MATLAB</ul>
+        <ul>HTML</ul>
+        <ul>CSS</ul>
+        <ul>SQL</ul>
+    </div>
+    <div>
+        <h3>Workshops and Courses</h3>
+        <ul>Introduction To Machine Learning<br><span style="font-size: 90%;">Coursera, Online<br>
+                This course was organised by Duke University through Coursera covering the
+                basics of machine learning, multilayer perceptron, convolutional neural networks,
+                computer vision, natural language processing etc.
+            </span></ul>
+        <ul>Application Of Python In Big Data, Natural Language Processing (NLP) And
+            Social Network Analysis (SNA)
+            <br><span style="font-size: 90%;">Visva-Bharati University, Santiniketan
+                <br>
+                A five day workshop on "Application of Python in Big Data, Natural Language
+                Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
+                University, Technically sponsored by IEEE Computational Intelligence Society
+                Kolkata Chapter</span>
+        </ul>
     </div>
     <div>
         <h3>Other Interests</h3>
+        <ul>Guitar</ul>
+        <ul>Piano</ul>
+        <ul>Football</ul>
+        <ul>Gamimg</ul>
     </div>
 </body>
 
