--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <hr>
     <div>
         <h3>Qualifications</h3>
-        <ul>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%;">Visva-Bharati University(2019 - 2022)</ul>
-        <ul>High Secondary<br><span style="font-size: 90%;">Bolpur High School (2019)</span></ul>
-        <ul>Secondary<br><span style="font-size: 90%;">Bolpur High School (2017)</span></ul>
+        <ul>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: lightslategray;">Visva-Bharati University(2019 - 2022)</ul>
+        <ul>High Secondary<br><span style="font-size: 90%; color: lightslategray;">Bolpur High School (2019)</span></ul>
+        <ul>Secondary<br><span style="font-size: 90%; color: lightslategray;">Bolpur High School (2017)</span></ul>
     </div>
     <div>
         <h3>Skills</h3>
@@ -39,14 +39,14 @@
     </div>
     <div>
         <h3>Workshops and Courses</h3>
-        <ul>Introduction To Machine Learning<br><span style="font-size: 90%;">Coursera, Online<br>
+        <ul>Introduction To Machine Learning<br><span style="font-size: 90%; color: lightslategray;">Coursera, Online<br>
                 This course was organised by Duke University through Coursera covering the
                 basics of machine learning, multilayer perceptron, convolutional neural networks,
                 computer vision, natural language processing etc.
             </span></ul>
         <ul>Application Of Python In Big Data, Natural Language Processing (NLP) And
             Social Network Analysis (SNA)
-            <br><span style="font-size: 90%;">Visva-Bharati University, Santiniketan
+            <br><span style="font-size: 90%; color: lightslategray;">Visva-Bharati University, Santiniketan
                 <br>
                 A five day workshop on "Application of Python in Big Data, Natural Language
                 Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
