--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <body>
     <h2>
-        <p style="text-align:left;">
+        <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
+        <p style="text-align:left; display: inline;">            
             Debapriya Das
-            <span style="float:right;font-size: 55%;">
-                Email: debapriyadas73@gmail.com<br>
+            <span style="float:right;font-size: 55%; color: lightslategray;">
+                <br>Email: debapriyadas73@gmail.com<br>
                 Mobile: +91 6295747430<br>
-                Ukilpatty, Bolpur, Birbhum, West Bengal
+                Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India
             </span>
         </p>
     </h2>
