--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h2>
         <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
-        <p style="text-align:left; display: inline;">            
+        <p style="text-align:left; display: inline;">
             Debapriya Das
             <span style="float:right;font-size: 55%; color: lightslategray;">
                 <br>Email: debapriyadas73@gmail.com<br>
@@ -23,7 +23,8 @@
     <hr>
     <div>
         <h3>Qualifications</h3>
-        <ul>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: lightslategray;">Visva-Bharati University(2019 - 2022)</ul>
+        <ul>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: lightslategray;">Visva-Bharati
+                University(2019 - 2022)</ul>
         <ul>High Secondary<br><span style="font-size: 90%; color: lightslategray;">Bolpur High School (2019)</span></ul>
         <ul>Secondary<br><span style="font-size: 90%; color: lightslategray;">Bolpur High School (2017)</span></ul>
     </div>
@@ -40,7 +41,8 @@
     </div>
     <div>
         <h3>Workshops and Courses</h3>
-        <ul>Introduction To Machine Learning<br><span style="font-size: 90%; color: lightslategray;">Coursera, Online<br>
+        <ul>Introduction To Machine Learning<br><span style="font-size: 90%; color: lightslategray;">Coursera,
+                Online<br>
                 This course was organised by Duke University through Coursera covering the
                 basics of machine learning, multilayer perceptron, convolutional neural networks,
                 computer vision, natural language processing etc.
