--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Debapriya Das | CV</title>
 </head>
 
-<body>
+<body style="background-color: rgb(218, 221, 228);">
     <h2>
         <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
         <p style="text-align:left; display: inline;">
             Debapriya Das
-            <span style="float:right;font-size: 55%; color: lightslategray;">
+            <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
                 <br>Email: debapriyadas73@gmail.com<br>
                 Mobile: +91 6295747430<br>
                 Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India
@@ -23,46 +23,55 @@
     <hr>
     <div>
         <h3>Qualifications</h3>
-        <ul>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: lightslategray;">Visva-Bharati
-                University(2019 - 2022)</ul>
-        <ul>High Secondary<br><span style="font-size: 90%; color: lightslategray;">Bolpur High School (2019)</span></ul>
-        <ul>Secondary<br><span style="font-size: 90%; color: lightslategray;">Bolpur High School (2017)</span></ul>
+        <ul>
+            <li>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati
+                    University(2019 - 2022)</li>
+            <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Bolpur High School (2019)</span>
+            </li>
+            <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Bolpur High School (2017)</span></li>
+        </ul>
     </div>
     <div>
         <h3>Skills</h3>
-        <ul>C</ul>
-        <ul>C++</ul>
-        <ul>Java</ul>
-        <ul>Python</ul>
-        <ul>MATLAB</ul>
-        <ul>HTML</ul>
-        <ul>CSS</ul>
-        <ul>SQL</ul>
+        <ul>
+            <li>C</li>
+            <li>C++</li>
+            <li>Java</li>
+            <li>Python</li>
+            <li>MATLAB</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SQL</li>
+        </ul>
     </div>
     <div>
         <h3>Workshops and Courses</h3>
-        <ul>Introduction To Machine Learning<br><span style="font-size: 90%; color: lightslategray;">Coursera,
-                Online<br>
-                This course was organised by Duke University through Coursera covering the
-                basics of machine learning, multilayer perceptron, convolutional neural networks,
-                computer vision, natural language processing etc.
-            </span></ul>
-        <ul>Application Of Python In Big Data, Natural Language Processing (NLP) And
-            Social Network Analysis (SNA)
-            <br><span style="font-size: 90%; color: lightslategray;">Visva-Bharati University, Santiniketan
-                <br>
-                A five day workshop on "Application of Python in Big Data, Natural Language
-                Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
-                University, Technically sponsored by IEEE Computational Intelligence Society
-                Kolkata Chapter</span>
+        <ul>
+            <li>Introduction To Machine Learning<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Coursera,
+                    Online<br>
+                    This course was organised by Duke University through Coursera covering the
+                    basics of machine learning, multilayer perceptron, convolutional neural networks,
+                    computer vision, natural language processing etc.
+                </span></li>
+            <li>Application Of Python In Big Data, Natural Language Processing (NLP) And
+                Social Network Analysis (SNA)
+                <br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati University, Santiniketan
+                    <br>
+                    A five day workshop on "Application of Python in Big Data, Natural Language
+                    Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
+                    University, Technically sponsored by IEEE Computational Intelligence Society
+                    Kolkata Chapter</span>
+            </li>
         </ul>
     </div>
     <div>
         <h3>Other Interests</h3>
-        <ul>Guitar</ul>
-        <ul>Piano</ul>
-        <ul>Football</ul>
-        <ul>Gamimg</ul>
+        <ul>
+            <li>Guitar</li>
+            <li>Piano</li>
+            <li>Football</li>
+            <li>Gamimg</li>
+        </ul>
     </div>
 </body>
 
