--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h3>Qualifications</h3>
         <ul>
             <li>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati
-                    University(2019 - 2022)</li>
+                    University(2019 - 2022)</li><br>
             <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Bolpur High School (2019)</span>
-            </li>
+            </li><br>
             <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Bolpur High School (2017)</span></li>
         </ul>
     </div>
@@ -52,7 +52,7 @@
                     This course was organised by Duke University through Coursera covering the
                     basics of machine learning, multilayer perceptron, convolutional neural networks,
                     computer vision, natural language processing etc.
-                </span></li>
+                </span></li><br>
             <li>Application Of Python In Big Data, Natural Language Processing (NLP) And
                 Social Network Analysis (SNA)
                 <br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati University, Santiniketan
