--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
 </head>
 
-<body style="background-color: rgb(218, 221, 228);">
+<body style="background-color: rgb(234, 255, 255);">
     <h2>
         <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
         <p style="text-align:left; display: inline;">
@@ -25,11 +25,11 @@
     <div>
         <h3>Qualifications</h3>
         <ul>
-            <li>B.Sc.(Hons.) Computer Science<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati
-                    University(2019 - 2022)</li><br>
-            <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Bolpur High School (2019)</span>
+            <li>B.Sc.(Hons.) Computer & System Sciences<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
+                    Visva-Bharati University(2019 - 2022)</li><br>
+            <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">89%<br>Bolpur High School (2019)</span>
             </li><br>
-            <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Bolpur High School (2017)</span></li>
+            <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">88%<br>Bolpur High School (2017)</span></li>
         </ul>
     </div>
     <div>
@@ -42,6 +42,7 @@
             <li>MATLAB</li>
             <li>HTML</li>
             <li>CSS</li>
+            <li>Javascript</li>
             <li>SQL</li>
         </ul>
     </div>
@@ -70,6 +71,7 @@
         <ul>
             <li>Guitar</li>
             <li>Piano</li>
+            <li>Singing</li>
             <li>Football</li>
             <li>Gamimg</li>
         </ul>
