--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
 </head>
 
-<body style="background-color: rgb(234, 255, 255);">
+<body style="background-color: rgb(172, 255, 255);">
+    <div style="margin: 7% 7% ; border-radius: 1%; background-color: rgb(234, 255, 255); padding: 3%;">
     <h2>
         <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
         <p style="text-align:left; display: inline;">
@@ -75,6 +76,7 @@
             <li>Football</li>
             <li>Gamimg</li>
         </ul>
+    </div>
     </div>
 </body>
 
