--- a/index.html
+++ b/index.html
@@ -6,77 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debapriya Das | CV</title>
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 </head>
 
 <body style="background-color: rgb(172, 255, 255);">
-    <div style="margin: 7% 5% ; border-radius: 5%; background-color: rgb(234, 255, 255); padding: 3%;">
-    <h2>
-        <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
-        <p style="text-align:left; display: inline;">
-            Debapriya Das
-            <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
-                <br>Email: debapriyadas73@gmail.com<br>
-                Mobile: +91 6295747430<br>
-                Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India
-            </span>
-        </p>
-    </h2>
-    <hr>
-    <div>
-        <h3>Qualifications</h3>
-        <ul>
-            <li>B.Sc.(Hons.) Computer & System Sciences<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
-                    Visva-Bharati University(2019 - 2022)</li><br>
-            <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">89%<br>Bolpur High School (2019)</span>
-            </li><br>
-            <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">88%<br>Bolpur High School (2017)</span></li>
-        </ul>
-    </div>
-    <div>
-        <h3>Skills</h3>
-        <ul>
-            <li>C</li>
-            <li>C++</li>
-            <li>Java</li>
-            <li>Python</li>
-            <li>MATLAB</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>SQL</li>
-        </ul>
-    </div>
-    <div>
-        <h3>Workshops and Courses</h3>
-        <ul>
-            <li>Introduction To Machine Learning<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Coursera,
-                    Online<br>
-                    This course was organised by Duke University through Coursera covering the
-                    basics of machine learning, multilayer perceptron, convolutional neural networks,
-                    computer vision, natural language processing etc.
-                </span></li><br>
-            <li>Application Of Python In Big Data, Natural Language Processing (NLP) And
-                Social Network Analysis (SNA)
-                <br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati University, Santiniketan
-                    <br>
-                    A five day workshop on "Application of Python in Big Data, Natural Language
-                    Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
-                    University, Technically sponsored by IEEE Computational Intelligence Society
-                    Kolkata Chapter</span>
-            </li>
-        </ul>
-    </div>
-    <div>
-        <h3>Other Interests</h3>
-        <ul>
-            <li>Guitar</li>
-            <li>Piano</li>
-            <li>Singing</li>
-            <li>Football</li>
-            <li>Gamimg</li>
-        </ul>
-    </div>
+    <div style="margin: 7% 5% ; border-radius: 5%; background-color: rgb(234, 255, 255); padding: 3%; box-shadow: -7px 12px 5px 0px rgba(0,0,0,0.53);
+    -webkit-box-shadow: -7px 12px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: -7px 12px 5px 0px rgba(0,0,0,0.53);">
+        <h2>
+            <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
+            <p style="text-align:left; display: inline;">
+                Debapriya Das
+                <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
+                    <br>Email: debapriyadas73@gmail.com<br>
+                    Mobile: +91 6295747430<br>
+                    Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India
+                </span>
+            </p>
+        </h2>
+        <hr>
+        <div>
+            <h3>Qualifications</h3>
+            <ul>
+                <li>B.Sc.(Hons.) Computer & System Sciences<br><span
+                        style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
+                        Visva-Bharati University(2019 - 2022)</li><br>
+                <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">89%<br>Bolpur High School
+                        (2019)</span>
+                </li><br>
+                <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">88%<br>Bolpur High School
+                        (2017)</span></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Skills</h3>
+            <ul>
+                <li>C</li>
+                <li>C++</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>MATLAB</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>SQL</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Workshops and Courses</h3>
+            <ul>
+                <li>Introduction To Machine Learning<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Coursera,
+                        Online<br>
+                        This course was organised by Duke University through Coursera covering the
+                        basics of machine learning, multilayer perceptron, convolutional neural networks,
+                        computer vision, natural language processing etc.
+                    </span></li><br>
+                <li>Application Of Python In Big Data, Natural Language Processing (NLP) And
+                    Social Network Analysis (SNA)
+                    <br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati University, Santiniketan
+                        <br>
+                        A five day workshop on "Application of Python in Big Data, Natural Language
+                        Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
+                        University, Technically sponsored by IEEE Computational Intelligence Society
+                        Kolkata Chapter</span>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h3>Other Interests</h3>
+            <ul>
+                <li>Guitar</li>
+                <li>Piano</li>
+                <li>Singing</li>
+                <li>Football</li>
+                <li>Gamimg</li>
+            </ul>
+        </div>
     </div>
 </body>
 
