--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 </head>
 
-<body style="background-color: rgb(172, 255, 255);">
-    <div style="margin: 7% 5% ; border-radius: 5%; background-color: rgb(234, 255, 255); padding: 3%; box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
+<body style="background-color: rgb(150, 241, 241);">
+    <div style="margin: 7% 5% ; border-radius: 25px; background-color: rgb(234, 255, 255); padding: 3%; box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);">
         <h2>
