--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
         </h2>
         <hr>
-        <div>
+        <div style="padding-top: 50px;">
             <h3>Qualifications</h3>
             <ul>
                 <li>B.Sc.(Hons.) Computer & System Sciences<br><span
