--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);">
         <h2>
-            <img src="pic.JPG" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
+            <img src="pic.JPG" alt="Debapriya" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
             <p style="text-align:left; display: inline;">
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
