--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
                 <li>Gamimg</li>
             </ul>
         </div>
+        <div>
+            <h3>Links</h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
+                <li><a href="https://github.com/Debapriya-source">Github Profile</a></li>
+            </ul>    
+        </div>
     </div>
 </body>
 
