--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div>
             <h3>My works</h3>
             <ul>
-                <li><a href="https://vbvl123.wixsite.com/vbvl">VBVL website</a></li>
+                <li><a href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I created this website to improve my website designing skills through Wix
+                    <br></span></a></li>
             </ul>    
         </div>
     </div>
