--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <div>
             <h3>Links</h3>
             <ul>
-                <li><a href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
-                <li><a href="https://github.com/Debapriya-source">Github Profile</a></li>
+                <li><a  style="text-decoration: none;" href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
+                <li><a  style="text-decoration: none;" href="https://github.com/Debapriya-source">Github Profile</a></li>
             </ul>    
         </div>
         <div>
             <h3>My works</h3>
             <ul>
-                <li><a href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I created this website to improve my website designing skills through Wix
+                <li><a style="text-decoration: none;" href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I created this website to improve my website designing skills through Wix
                     <br></span></a></li>
             </ul>    
         </div>
