--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <ul>
                 <li><a  style="text-decoration: none;" href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
                 <li><a  style="text-decoration: none;" href="https://github.com/Debapriya-source">Github Profile</a></li>
+                <li><a  style="text-decoration: none;" href="https://www.facebook.com/debapriya.das.7927">Facebook Profile</a></li>
             </ul>    
         </div>
         <div>
