--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </ul>
         </div>
         <div>
-            <h3>Links</h3>
+            <h3>Profile Links</h3>
             <ul>
                 <li><a  style="text-decoration: none;" href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
                 <li><a  style="text-decoration: none;" href="https://github.com/Debapriya-source">Github Profile</a></li>
