--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <li>B.Sc.(Hons.) Computer & System Sciences<br><span
                         style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
                         Visva-Bharati University(2019 - 2022)</li><br>
-                <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">89%<br>Bolpur High School
+                <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBCHSE (89%)<br>Bolpur High School
                         (2019)</span>
                 </li><br>
-                <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">88%<br>Bolpur High School
+                <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBBSE (88%)<br>Bolpur High School
                         (2017)</span></li>
             </ul>
         </div>
