--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 <li>CSS</li>
                 <li>Javascript</li>
                 <li>SQL</li>
+                <li>Machine Learning</li>
+                <li>Data Structures & Algorithms</li>
             </ul>
         </div>
         <div>
@@ -80,6 +82,14 @@
                 <li>Singing</li>
                 <li>Football</li>
                 <li>Gamimg</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Known languages</h3>
+            <ul>
+                <li>English</li>
+                <li>Bengali</li>
+                <li>Hindi</li>
             </ul>
         </div>
         <div>
