--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);">
         <h2>
-            <img src="pic.JPG" alt="Debapriya" width="100" height="100" style="clip-path: circle(); vertical-align: middle;">
+            <img src="pic.JPG" alt="Debapriya" width="100" height="100"
+                style="clip-path: circle(); vertical-align: middle;">
             <p style="text-align:left; display: inline;">
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
@@ -31,7 +32,8 @@
                 <li>B.Sc.(Hons.) Computer & System Sciences<br><span
                         style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
                         Visva-Bharati University(2019 - 2022)</li><br>
-                <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBCHSE (89%)<br>Bolpur High School
+                <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBCHSE (89%)<br>Bolpur High
+                        School
                         (2019)</span>
                 </li><br>
                 <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBBSE (88%)<br>Bolpur High School
@@ -95,19 +97,42 @@
         <div>
             <h3>Profile Links</h3>
             <ul>
-                <li><a  style="text-decoration: none;" href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
-                <li><a  style="text-decoration: none;" href="https://github.com/Debapriya-source">Github Profile</a></li>
-                <li><a  style="text-decoration: none;" href="https://www.facebook.com/debapriya.das.7927">Facebook Profile</a></li>
-            </ul>    
+                <li><a style="text-decoration: none;"
+                        href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
+                <li><a style="text-decoration: none;" href="https://github.com/Debapriya-source">Github Profile</a></li>
+                <li><a style="text-decoration: none;" href="https://www.facebook.com/debapriya.das.7927">Facebook
+                        Profile</a></li>
+            </ul>
         </div>
         <div>
             <h3>My works</h3>
             <ul>
-                <li><a style="text-decoration: none;" href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I created this website to improve my website designing skills through Wix
-                    <br></span></a></li>
-            </ul>    
+                <li><a style="text-decoration: none;" href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span
+                            style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I
+                            created this website to improve my website designing skills through Wix
+                            <br></span></a></li>
+            </ul>
         </div>
+        <hr style="background-color: black; width: 8%; margin-top: 3%;">
     </div>
 </body>
+
+<style>
+    p{
+    font-weight: 100;
+    font-family: sans-serif;
+}
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+h3{
+    font-weight: 500;
+    font-family:URW Chancery L, cursive;
+}
+li{
+    font-family: Snell Rounhand, cursive;
+}
+
+</style>
 
 </html>
