--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p style="text-align:left; display: inline;">
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
-                    <br>Email: debapriyadas73@gmail.com<br>
+                    <br><b>Email: debapriyadas73@gmail.com<br>
                     Mobile: +91 6295747430<br>
-                    Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India
+                    Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</b>
                 </span>
             </p>
         </h2>
