--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debapriya Das | CV</title>
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 
 <body style="background-color: rgb(150, 241, 241);">
@@ -19,9 +22,9 @@
             <p style="text-align:left; display: inline;">
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
-                    <br>Email: debapriyadas73@gmail.com<br>
-                    Mobile: +91 6295747430<br>
-                    Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India
+                    <br>Email:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(56, 57, 58);"> debapriyadas73@gmail.com</a><br>
+                    Mobile: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88);">+91 6295747430</a><br>
+                    <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
                 </span>
             </p>
         </h2>
@@ -126,11 +129,11 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 h3{
-    font-weight: 500;
-    font-family:URW Chancery L, cursive;
+    font-size: larger;
+    font-family: 'Itim', cursive;;
 }
 li{
-    font-family: Snell Rounhand, cursive;
+    font-family: 'Itim', cursive;
 }
 
 </style>
