--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p style="text-align:left; display: inline;">
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
-                    <br>Email:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(56, 57, 58);"> debapriyadas73@gmail.com</a><br>
-                    Mobile: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88);">+91 6295747430</a><br>
+                    <br>Mail here:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(56, 57, 58); text-shadow: 0px 0px 1px rgba(70, 165, 255, 1);"> debapriyadas73@gmail.com</a><br>
+                    Whatsapp me: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);">+91 6295747430</a><br>
                     <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
                 </span>
             </p>
@@ -100,10 +100,10 @@
         <div>
             <h3>Profile Links</h3>
             <ul>
-                <li><a style="text-decoration: none;"
+                <li><a style="text-decoration: none; color: blue;"
                         href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
-                <li><a style="text-decoration: none;" href="https://github.com/Debapriya-source">Github Profile</a></li>
-                <li><a style="text-decoration: none;" href="https://www.facebook.com/debapriya.das.7927">Facebook
+                <li><a style="text-decoration: none; color: black;" href="https://github.com/Debapriya-source">Github Profile</a></li>
+                <li><a style="text-decoration: none; color: rgb(20, 0, 197);" href="https://www.facebook.com/debapriya.das.7927">Facebook
                         Profile</a></li>
             </ul>
         </div>
