--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <div>
             <h3>Profile Links</h3>
             <ul>
-                <li><a style="text-decoration: none; color: blue;"
+                <li><a style="text-decoration: none; color: rgb(0, 140, 255);"
                         href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
                 <li><a style="text-decoration: none; color: black;" href="https://github.com/Debapriya-source">Github Profile</a></li>
-                <li><a style="text-decoration: none; color: rgb(20, 0, 197);" href="https://www.facebook.com/debapriya.das.7927">Facebook
+                <li><a style="text-decoration: none; color: blue;" href="https://www.facebook.com/debapriya.das.7927">Facebook
                         Profile</a></li>
             </ul>
         </div>
