--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
                     <br>Mail here:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(56, 57, 58); text-shadow: 0px 0px 1px rgba(70, 165, 255, 1);"> debapriyadas73@gmail.com</a><br>
-                    Whatsapp me: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);">+91 6295747430</a><br>
+                    Whatsapp me: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Let's%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);">+91 6295747430</a><br>
                     <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
                 </span>
             </p>
