--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 
 <body style="background-color: rgb(150, 241, 241);">
@@ -22,8 +23,8 @@
             <p style="text-align:left; display: inline;">
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
-                    <br>Mail here:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(56, 57, 58); text-shadow: 0px 0px 1px rgba(70, 165, 255, 1);"> debapriyadas73@gmail.com</a><br>
-                    Whatsapp me: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);">+91 6295747430</a><br>
+                    <br>Mail here:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(56, 57, 58); text-shadow: 0px 0px 1px rgba(70, 165, 255, 1);"> debapriyadas73@gmail.com&nbsp <i class="bi bi-envelope"></i></a><br>
+                    Mobile: <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);">+91 6295747430&nbsp<i class="bi bi-whatsapp"></i></a><br>
                     <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
                 </span>
             </p>
@@ -99,12 +100,12 @@
         </div>
         <div>
             <h3>Profile Links</h3>
-            <ul>
+            <ul style="list-style: none; padding-left: 2%;">
                 <li><a style="text-decoration: none; color: rgb(0, 140, 255);"
-                        href="https://www.linkedin.com/in/debapriya-das-510728220/">Linkedin Profile</a></li>
-                <li><a style="text-decoration: none; color: black;" href="https://github.com/Debapriya-source">Github Profile</a></li>
-                <li><a style="text-decoration: none; color: blue;" href="https://www.facebook.com/debapriya.das.7927">Facebook
-                        Profile</a></li>
+                        href="https://www.linkedin.com/in/debapriya-das-510728220/"><i class="bi bi-linkedin"></i>&nbsp debapriya-das-510728220</a></li>
+                <li><a style="text-decoration: none; color: black;" href="https://github.com/Debapriya-source"><i class="bi bi-github"></i>&nbsp Debapriya-source</a></li>
+                <li><a style="text-decoration: none; color: blue;" href="https://www.facebook.com/debapriya.das.7927"><i class="bi bi-facebook"></i>&nbsp debapriya.das.7927</a></li>
+                <li><a style="text-decoration: none; color: rgb(255, 0, 157);" href="https://www.instagram.com/das.debapriya.arka/"><i class="bi bi-instagram"></i>&nbsp das.debapriya.arka</a></li>
             </ul>
         </div>
         <div>
@@ -135,7 +136,12 @@ h3{
 li{
     font-family: 'Itim', cursive;
 }
-
+a:hover {
+  color: darkblue;
+  font-size: 105%;
+  opacity: 0.7;
+  transition: 0.3s
+}
 </style>
 
 </html>
