--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/8870f98282.js" crossorigin="anonymous"></script>
+</head>
 </head>
 
 <body style="background-color: rgb(150, 241, 241);">
@@ -31,7 +33,7 @@
         </h2>
         <hr>
         <div style="padding-top: 50px;">
-            <h3>Qualifications</h3>
+            <h3><i class="fas fa-user-graduate"></i>&nbsp Qualifications</h3>
             <ul>
                 <li>B.Sc.(Hons.) Computer & System Sciences<br><span
                         style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
@@ -45,7 +47,7 @@
             </ul>
         </div>
         <div>
-            <h3>Skills</h3>
+            <h3><i class="fas fa-laptop-code"></i>&nbsp Skills</h3>
             <ul>
                 <li>C</li>
                 <li>C++</li>
@@ -61,7 +63,7 @@
             </ul>
         </div>
         <div>
-            <h3>Workshops and Courses</h3>
+            <h3><i class="fas fa-book-open"></i>&nbsp Workshops and Courses</h3>
             <ul>
                 <li>Introduction To Machine Learning<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Coursera,
                         Online<br>
@@ -81,17 +83,17 @@
             </ul>
         </div>
         <div>
-            <h3>Other Interests</h3>
-            <ul>
-                <li>Guitar</li>
-                <li>Piano</li>
-                <li>Singing</li>
-                <li>Football</li>
-                <li>Gamimg</li>
+            <h3><i class="fas fa-icons"></i>&nbsp Other Interests</h3>
+            <ul style="list-style: none; padding-left: 2%;">
+                <li><i class="fas fa-guitar"></i>&nbsp Guitar</li>
+                <li><i class="fas fa-music"></i>&nbsp Piano</li>
+                <li><i class="fas fa-microphone"></i>&nbsp Singing</li>
+                <li><i class="fas fa-futbol"></i>&nbsp Football</li>
+                <li><i class="fas fa-gamepad"></i>&nbsp Gamimg</li>
             </ul>
         </div>
         <div>
-            <h3>Known languages</h3>
+            <h3><i class="fas fa-language"></i>&nbsp Known languages</h3>
             <ul>
                 <li>English</li>
                 <li>Bengali</li>
@@ -99,7 +101,7 @@
             </ul>
         </div>
         <div>
-            <h3>Profile Links</h3>
+            <h3><i class="far fa-address-card"></i>&nbsp Profile Links</h3>
             <ul style="list-style: none; padding-left: 2%;">
                 <li><a style="text-decoration: none; color: rgb(0, 140, 255);"
                         href="https://www.linkedin.com/in/debapriya-das-510728220/"><i class="bi bi-linkedin"></i>&nbsp debapriya-das-510728220</a></li>
@@ -109,7 +111,7 @@
             </ul>
         </div>
         <div>
-            <h3>My works</h3>
+            <h3><i class="fas fa-user-tie"></i>&nbsp My works</h3>
             <ul>
                 <li><a style="text-decoration: none;" href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span
                             style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I
