--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Debapriya Das
                 <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
                     <br>E-mail:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(255, 0, 0); text-shadow: 0px 0px 2px rgb(255, 123, 70); font-weight: 100;"> debapriyadas73@gmail.com&nbsp <i class="bi bi-envelope"></i></a><br>
-                    Mobile:<a href="tel:+916295747430" style="text-decoration: none; color: tomato;">+91 6295747430&nbsp</a> <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);"><i class="bi bi-whatsapp"></i></a><br>
+                    Mobile:<a href="tel:+916295747430" style="text-decoration: none; color: black;">+91 6295747430&nbsp</a> <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);"><i class="bi bi-whatsapp"></i></a><br>
                     <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
                 </span>
             </p>
