--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ body{
 }
 h3{
     font-size: larger;
-    font-family: 'Itim', cursive;;
+    font-family: 'Itim', cursive;
+    text-shadow: -2px 2px 2px rgba(150, 150, 150, 0.85);
 }
 li{
     font-family: 'Itim', cursive;
