--- a/index.html
+++ b/index.html
@@ -49,16 +49,23 @@
         <div>
             <h3><i class="fas fa-laptop-code"></i>&nbsp Skills</h3>
             <ul>
-                <li>C</li>
-                <li>C++</li>
-                <li>Java</li>
+                <li>Node.js</li>
+                <li>Express.js</li>
+                <li>React.js</li>
+                <li>MongoDB</li>
+                <li>REST API</li>
+                <li>TDD</li>
+                <li>CI/CD</li>
+                <li>AWS</li>
                 <li>Python</li>
-                <li>MATLAB</li>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Javascript</li>
                 <li>SQL</li>
-                <li>Machine Learning</li>
+                <li>C</li>
+                <li>C++</li>
+                <li>Java</li>                
+                <li>MATLAB</li>                
                 <li>Data Structures & Algorithms</li>
             </ul>
         </div>
