--- a/index.html
+++ b/index.html
@@ -15,41 +15,50 @@
 </head>
 </head>
 
-<body style="background-color: rgb(150, 241, 241);">
-    <div style="margin: 7% 5% ; border-radius: 25px; background-color: rgb(234, 255, 255); padding: 3%; box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
+<body style="background-color: rgb(63, 162, 255);">
+    <div style="margin: 2%; min-width: 350px; border-radius: 25px; background-color: rgb(255, 255, 255); padding: 3%; box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.23);">
-        <h2>
-            <img src="pic.JPG" alt="Debapriya" width="100" height="100"
-                style="clip-path: circle(); vertical-align: middle;">
-            <p style="text-align:left; display: inline;">
-                Debapriya Das
-                <span style="float:right;font-size: 55%; color: rgb(69, 74, 80);">
-                    <br>E-mail:<a href="mailto:debapriyadas73@gmail.com" style="text-decoration: none; color: rgb(255, 0, 0); text-shadow: 0px 0px 2px rgb(255, 123, 70); font-weight: 100;"> debapriyadas73@gmail.com&nbsp <i class="bi bi-envelope"></i></a><br>
-                    Mobile:<a href="tel:+916295747430" style="text-decoration: none; color: black;">+91 6295747430&nbsp</a> <a href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..." style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);"><i class="bi bi-whatsapp"></i></a><br>
-                    <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
-                </span>
-            </p>
-        </h2>
+        <div style="display: flex; align-items: center; justify-content: space-between; gap: 5px;">
+            <h2>
+                <img src="pic.jpeg" alt="Debapriya" width="150" height="150"
+                    style="clip-path: circle(); vertical-align: middle;">
+                <p style="text-align:center; display: inline;">
+                    Debapriya&nbspDas</p>
+            </h2>
+            <div style="float:right; color: rgb(69, 74, 80);">
+                <br>E-mail:<a href="mailto:debapriyadas73@gmail.com"
+                    style="text-decoration: none; color: rgb(255, 0, 0); text-shadow: 0px 0px 2px rgb(255, 123, 70); font-weight: 100;">
+                    debapriyadas73@gmail.com&nbsp <i class="bi bi-envelope"></i></a><br>
+                Mobile:<a href="tel:+916295747430" style="text-decoration: none; color: black;">+91
+                    6295747430&nbsp</a> <a
+                    href="https://wa.me/916295747430?text=Hi%20I'm%20interested%20in%20your%20profile.%20Lets%20have%20a%20chat..."
+                    style="text-decoration: none; color: rgb(86, 88, 88); text-shadow: 0px 0px 1px rgba(0, 255, 122, 1);"><i
+                        class="bi bi-whatsapp"></i></a><br>
+                <span style="color: rgb(58, 58, 58);">Ukilpatty, Bolpur<br> Birbhum, West Bengal<br>India</span>
+            </div>
+        </div>
+
         <hr>
         <div style="padding-top: 50px;">
             <h3><i class="fas fa-user-graduate"></i>&nbsp Qualifications</h3>
             <ul>
-                <li>B.Sc.(Hons.) Computer & System Sciences<br><span
-                        style="font-size: 90%; color: rgb(95, 96, 99);">Running...<br>
+                <li>M.Sc. in Computer Science<br><span style=" color: rgb(95, 96, 99);">running...<br>
+                        Visva-Bharati University(2022 - )</li><br>
+                <li>B.Sc.(Hons.) in Computer & System Sciences<br><span style=" color: rgb(95, 96, 99);">CGPA 7.85<br>
                         Visva-Bharati University(2019 - 2022)</li><br>
-                <li>High Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBCHSE (89%)<br>Bolpur High
+                <li>High Secondary<br><span style=" color: rgb(95, 96, 99);">WBCHSE (89%)<br>Bolpur High
                         School
                         (2019)</span>
                 </li><br>
-                <li>Secondary<br><span style="font-size: 90%; color: rgb(95, 96, 99);">WBBSE (88%)<br>Bolpur High School
+                <li>Secondary<br><span style=" color: rgb(95, 96, 99);">WBBSE (88%)<br>Bolpur High School
                         (2017)</span></li>
             </ul>
         </div>
         <div>
             <h3><i class="fas fa-laptop-code"></i>&nbsp Skills</h3>
-            <ul>
-                <li>Node.js</li>
+            <!-- <ul> -->
+            <!-- <li>Node.js</li>
                 <li>Express.js</li>
                 <li>React.js</li>
                 <li>MongoDB</li>
@@ -64,15 +73,53 @@
                 <li>SQL</li>
                 <li>C</li>
                 <li>C++</li>
-                <li>Java</li>                
-                <li>MATLAB</li>                
-                <li>Data Structures & Algorithms</li>
-            </ul>
+                <li>Java</li>
+                <li>MATLAB</li>
+                <li>Data Structures & Algorithms</li> -->
+            <div>
+
+                <div style="display: flex; align-items: center; gap:10px;">
+                    <img width="80" height="80" src="https://img.icons8.com/color/80/html-5.png" alt="html-5" />
+                    <img width="80" height="80" src="https://img.icons8.com/color/80/css3.png" alt="css3" />
+                    <img width="80" height="80" src="https://img.icons8.com/color/80/javascript.png" alt="javascript" />
+
+                </div>
+                <div style="display: flex; align-items: center; gap:10px;">
+                    <img width="80" height="80" src="https://img.icons8.com/color/80/nodejs.png" alt="nodejs" />
+                    <img width="80" height="80" src="https://img.icons8.com/ios/80/express-js.png" alt="express-js" />
+                    <img width="80" height="80" src="https://img.icons8.com/plasticine/100/react.png" alt="react" />
+                    <img width="80" height="80" src="https://img.icons8.com/nolan/80/mongo-db.png" alt="mongo-db" />
+
+                </div>
+                <div style="display: flex; align-items: center; gap:10px;"><img width="50" height="50"
+                        src="https://img.icons8.com/ios/50/api-settings.png" alt="api-settings" /><img width="80"
+                        height="80" src="https://img.icons8.com/quill/80/backend-development.png"
+                        alt="backend-development" />
+                    <img width="80" height="80" src="https://img.icons8.com/color/80/amazon-web-services.png" />
+
+                    <img width="80" height="80" src="https://img.icons8.com/wired/80/sql.png" alt="sql" />
+                </div>
+                <div style="display: flex; align-items: center; gap:10px;"><img width="80" height="80"
+                        src="https://img.icons8.com/color/80/python--v1.png" alt="python--v1" /><img width="80"
+                        height="80" src="https://img.icons8.com/color/80/c-plus-plus-logo.png" alt="c-plus-plus-logo" />
+                    <img width="80" height="80" src="https://img.icons8.com/color/80/c-programming.png"
+                        alt="c-programming" /><img width="80" height="80"
+                        src="https://img.icons8.com/color/80/java-coffee-cup-logo.png" alt="java-coffee-cup-logo" />
+
+
+                    <!-- <img width="80" height="80" src="https://img.icons8.com/color/80/data-configuration.png"
+                    alt="data-configuration" /> -->
+
+                </div>
+                <div style="display: flex; align-items: center; gap:10px;"><img width="80" height="80"
+                        src="https://img.icons8.com/fluency/80/matlab.png" alt="matlab" /></div>
+            </div>
+            <!-- </ul> -->
         </div>
         <div>
             <h3><i class="fas fa-book-open"></i>&nbsp Workshops and Courses</h3>
             <ul>
-                <li>Introduction To Machine Learning<br><span style="font-size: 90%; color: rgb(95, 96, 99);">Coursera,
+                <li>Introduction To Machine Learning<br><span style=" color: rgb(95, 96, 99);">Coursera,
                         Online<br>
                         This course was organised by Duke University through Coursera covering the
                         basics of machine learning, multilayer perceptron, convolutional neural networks,
@@ -80,7 +127,7 @@
                     </span></li><br>
                 <li>Application Of Python In Big Data, Natural Language Processing (NLP) And
                     Social Network Analysis (SNA)
-                    <br><span style="font-size: 90%; color: rgb(95, 96, 99);">Visva-Bharati University, Santiniketan
+                    <br><span style=" color: rgb(95, 96, 99);">Visva-Bharati University, Santiniketan
                         <br>
                         A five day workshop on "Application of Python in Big Data, Natural Language
                         Processing (NLP) and Social Network Analysis (SNA)" held in Visva-Bharati
@@ -111,17 +158,22 @@
             <h3><i class="far fa-address-card"></i>&nbsp Profile Links</h3>
             <ul style="list-style: none; padding-left: 2%;">
                 <li><a style="text-decoration: none; color: rgb(0, 140, 255);"
-                        href="https://www.linkedin.com/in/debapriya-das-510728220/"><i class="bi bi-linkedin"></i>&nbsp debapriya-das-510728220</a></li>
-                <li><a style="text-decoration: none; color: black;" href="https://github.com/Debapriya-source"><i class="bi bi-github"></i>&nbsp Debapriya-source</a></li>
-                <li><a style="text-decoration: none; color: blue;" href="https://www.facebook.com/debapriya.das.7927"><i class="bi bi-facebook"></i>&nbsp debapriya.das.7927</a></li>
-                <li><a style="text-decoration: none; color: rgb(255, 0, 157);" href="https://www.instagram.com/das.debapriya.arka/"><i class="bi bi-instagram"></i>&nbsp das.debapriya.arka</a></li>
+                        href="https://www.linkedin.com/in/debapriya-das-510728220/"><i class="bi bi-linkedin"></i>&nbsp
+                        debapriya-das-510728220</a></li>
+                <li><a style="text-decoration: none; color: black;" href="https://github.com/Debapriya-source"><i
+                            class="bi bi-github"></i>&nbsp Debapriya-source</a></li>
+                <li><a style="text-decoration: none; color: blue;" href="https://www.facebook.com/debapriya.das.7927"><i
+                            class="bi bi-facebook"></i>&nbsp debapriya.das.7927</a></li>
+                <li><a style="text-decoration: none; color: rgb(255, 0, 157);"
+                        href="https://www.instagram.com/das.debapriya.arka/"><i class="bi bi-instagram"></i>&nbsp
+                        das.debapriya.arka</a></li>
             </ul>
         </div>
         <div>
             <h3><i class="fas fa-user-tie"></i>&nbsp My works</h3>
             <ul>
                 <li><a style="text-decoration: none;" href="https://vbvl123.wixsite.com/vbvl">VBVL website<br><span
-                            style="font-size: 90%; color: rgb(95, 96, 99);">This website is partially complete, I
+                            style=" color: rgb(95, 96, 99);">This website is partially complete, I
                             created this website to improve my website designing skills through Wix
                             <br></span></a></li>
             </ul>
@@ -131,27 +183,31 @@
 </body>
 
 <style>
-    p{
-    /* font-weight: 100; */
-    font-family: sans-serif;
-}
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-h3{
-    font-size: larger;
-    font-family: 'Itim', cursive;
-    text-shadow: -2px 2px 2px rgba(150, 150, 150, 0.35);
-}
-li{
-    font-family: 'Itim', cursive;
-}
-a:hover {
-  color: darkblue;
-  font-size: 105%;
-  opacity: 0.7;
-  transition: 0.3s
-}
+    p {
+        /* font-weight: 100; */
+        font-family: sans-serif;
+    }
+
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    h3 {
+        font-size: larger;
+        font-family: 'Itim', cursive;
+        text-shadow: -2px 2px 2px rgba(150, 150, 150, 0.35);
+    }
+
+    li {
+        font-family: 'Itim', cursive;
+    }
+
+    a:hover {
+        color: darkblue;
+        font-size: 105%;
+        opacity: 0.7;
+        transition: 0.3s
+    }
 </style>
 
 </html>
